# nextjs-lesson-rest-api

./: pyproject.toml  requirements-dev.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
rest_api/: settings.py  wsgi.py
